--- a/app/components/card.hbs
+++ b/app/components/card.hbs
@@ -1,5 +1,5 @@
-<div class="border rounded content-container">
-    <img src={{@imagePath}} alt={{@imageAltText}}>
+<div class="border rounded card-content-container">
+    <img class="card-image" src={{@imagePath}} alt={{@imageAltText}}>
 
     <LinkTo @route={{@route}}>
         {{@linkText}}
