--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,14 +1,23 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 
-.content-container {
+.card-content-container {
     background: #e0ced8;
+    height: 40vh;
     padding: 5%;
+    margin: 5%;
+    align-content: center;
 }
 
 .card-container {
     display: grid;
-    grid-template-columns: auto auto;
-    width: 70%;
-    height: 70%;
+    grid-template: 100% / auto auto;
 }
   
+.card-image {
+    width: 50%;
+    height: 50%;
+}
+
+a:link {
+    text-decoration: none;
+}
