--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,29 +1,31 @@
-<div class="card-container">
+<div class="background-box"></div>
+
+<div class="cards-container">
     <Card
-        @imagePath="/assets/hammer-line.svg"
+        @imagePath="/assets/images/hammer-line.svg"
         @imageAltText="A stock image of a hammer"
         @route="workbench"
-        @linkText="Access the workbench"
+        @linkText="Workbench"
     />
 
     <Card
-        @imagePath="/assets/book-open-line.svg"
+        @imagePath="/assets/images/book-open-line.svg"
         @imageAltText="A stock image of an open book"
         @route="guides"
-        @linkText="Access the guides"
+        @linkText="Guides"
     />
 
     <Card
-        @imagePath="/assets/bike-line.svg"
+        @imagePath="/assets/images/bike-line.svg"
         @imageAltText="A stock image of a bike"
         @route="bikes"
-        @linkText="Access the bikes list"
+        @linkText="Bikes"
     />
 
     <Card
-        @imagePath="/assets/puzzle-line.svg"
+        @imagePath="/assets/images/puzzle-line.svg"
         @imageAltText="A stock image of a puzzle piece"
         @route="parts"
-        @linkText="Access the parts list"
+        @linkText="Parts"
     />
 </div>
