--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,23 +1,63 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 
-.card-content-container {
-    background: #e0ced8;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    // color: black;
+}
+
+:root {
+    --light-gray: #f0f0f0;
+    --gray: #aaaaaa;
+    --dark-gray: #505050;
+}
+
+.cards-container {
+    background-image: url("/assets/images/workbench.jpg");
+    background-size: cover;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    align-items: center;
+}
+
+// Card component contents
+
+.card-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.8);
+    text-decoration: none;
     height: 40vh;
     padding: 5%;
     margin: 5%;
-    align-content: center;
+    justify-content: center;
+    transform: scale(1);
+    transition: transform 0.2s;
 }
 
-.card-container {
-    display: grid;
-    grid-template: 100% / auto auto;
+.card-content p {
+    color: black;
+    padding-top: 5%;
+    font-size: 2rem;
+}
+
+.card-content:hover {
+    transform: scale(1.03);
+    background: var(--light-gray);
 }
   
 .card-image {
-    width: 50%;
-    height: 50%;
+    width: 10vw;
+    height: 10vh;
 }
 
-a:link {
-    text-decoration: none;
+.background-box {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    z-index: 0;
+    background: rgba(0, 0, 0, 0.5);
 }
