--- a/app/components/card.hbs
+++ b/app/components/card.hbs
@@ -1,4 +1,4 @@
-<a href={{@route}} class="border rounded card-content">
+<a href={{@route}} class="card-content">
     <img class="card-image" src={{@imagePath}} alt={{@imageAltText}}>
     <p>{{@linkText}}</p>
 </a>
