index ui, generic table component

--- a/app/parts/template.hbs
+++ b/app/parts/template.hbs
@@ -1,3 +1,8 @@
 {{page-title "Parts"}}
 
 <LinkTo @route="index">Back</LinkTo>
+
+<ResourceTable
+    @isParts={{true}}
+    @model={{this.model}}
+/>
