--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,31 +1,31 @@
 <div class="background-box"></div>
 
 <div class="cards-container">
-    <Card
+    <IndexCard
         @imagePath="/assets/images/hammer-line.svg"
         @imageAltText="A stock image of a hammer"
         @route="workbench"
-        @linkText="Workbench"
+        @displayText="Workbench"
     />
 
-    <Card
+    <IndexCard
         @imagePath="/assets/images/book-open-line.svg"
         @imageAltText="A stock image of an open book"
         @route="guides"
-        @linkText="Guides"
+        @displayText="Guides"
     />
 
-    <Card
+    <IndexCard
         @imagePath="/assets/images/bike-line.svg"
         @imageAltText="A stock image of a bike"
         @route="bikes"
-        @linkText="Bikes"
+        @displayText="Bikes"
     />
 
-    <Card
+    <IndexCard
         @imagePath="/assets/images/puzzle-line.svg"
         @imageAltText="A stock image of a puzzle piece"
         @route="parts"
-        @linkText="Parts"
+        @displayText="Parts"
     />
 </div>
