--- a/app/components/index-card.hbs
+++ b/app/components/index-card.hbs
@@ -1,4 +1,4 @@
 <a href={{@route}} class="card-content">
     <img class="card-image" src={{@imagePath}} alt={{@imageAltText}}>
-    <p>{{@linkText}}</p>
+    <p>{{@displayText}}</p>
 </a>
