--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,6 +4,18 @@ html {
     background: black;
 }
 
+.nav-header {
+    top: 0;
+    height: 50px;
+    width: 100%;
+    background: black;
+}
+
+.nav-header img {
+    padding: 5px;
+    height: 50px;
+}
+
 .cards-container {
     background-image: url("/assets/images/workbench.jpg");
     background-size: cover;
