centralize header, use application template

--- a/app/components/index-card.hbs
+++ b/app/components/index-card.hbs
@@ -1,5 +1,5 @@
-<a href={{@route}} class="card-content">
-    <img class="card-image" src={{@imagePath}} alt={{@imageAltText}}>
+<a href={{@route}} class="index-card-content">
+    <img class="index-card-image" src={{@imagePath}} alt={{@imageAltText}}>
     <p>
         {{#if @displayText}}
             {{@displayText}}
