--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,6 +4,10 @@ html {
     background: black;
 }
 
+ul {
+    list-style: none;
+}
+
 .nav-header {
     top: 0;
     height: 50px;
@@ -62,4 +66,13 @@ html {
     height: 100vh;
     position: absolute;
     background: rgba(0, 0, 0, 0.7);
+}
+
+.item-thumbnail-image {
+    width: 150px;
+    height: 150px;
+}
+
+.item-header {
+    padding-top: 10px;
 }
