--- a/app/components/resource-table.hbs
+++ b/app/components/resource-table.hbs
@@ -1,4 +1,4 @@
-<table>
+<table class="resource-table">
     {{#each @model as |item|}}
         <tbody>
             <td>
@@ -17,9 +17,6 @@
                    />
                 </ul>
             </td>
-            
         </tbody>
-
-        <hr>
     {{/each}}
 </table>
