--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,6 @@
-@import "node_modules/bootstrap/scss/bootstrap";
+@import "./index-card";
+@import "./nav-header";
+@import "./resource-table";
 
 html {
     background: black;
@@ -8,71 +10,10 @@ ul {
     list-style: none;
 }
 
-.nav-header {
-    top: 0;
-    height: 50px;
-    width: 100%;
-    background: black;
-}
-
-.nav-header img {
-    padding: 5px 10px;
-    height: 50px;
-}
-
-.cards-container {
-    background-image: url("/assets/images/workbench.jpg");
-    background-size: cover;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 50vw 50vw;
-    align-items: center;
-}
-
-// Card component contents
-
-.index-card-content {
-    z-index: 1;
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.2);
-    transition: background-color 0.25s;
-    text-decoration: none;
-    padding: 5%;
-    align-items: center;
-    justify-content: center;
-}
-
-.index-card-content p {
-    color: white;
-    padding-top: 5%;
-    font-size: 3vh;
-    text-transform: uppercase;
-}
-
-.index-card-content:hover {
-    background-color: rgba(0, 0, 0, 0.6);
-}
-  
-.index-card-image {
-    width: 10vw;
-    height: 10vh;
-}
-
 .background-box {
     z-index: 0;
     width: 100vw;
     height: 100vh;
     position: absolute;
     background: rgba(0, 0, 0, 0.7);
-}
-
-.item-thumbnail-image {
-    width: 150px;
-    height: 150px;
-}
-
-.item-header {
-    padding-top: 10px;
 }
