consolidate table logic, catch-all route

--- a/app/components/resource-table.hbs
+++ b/app/components/resource-table.hbs
@@ -7,11 +7,11 @@
 
             <td>
                 <h5 class="item-header">
-                    <b>{{this.getResourceDisplayName item}}</b>
+                    <b>{{this.getDisplayName item}}</b>
                 </h5>
 
                 <ul>
-                   <ResourceDetails
+                   <ResourceTableDetails
                         @item={{item}}
                         @currentRouteName={{this.router.currentRouteName}}
                    />
