--- a/app/components/resource-table.hbs
+++ b/app/components/resource-table.hbs
@@ -11,7 +11,12 @@
                 </h5>
 
                 <ul>
-                    {{item.make}}
+                    {{#let (get-table-details item.constructor.modelName) as |ContextSpecificComponent|}}
+                        {{log item.attributes}}
+                        <ContextSpecificComponent
+                            @item={{item}}
+                        />
+                    {{/let}}
                 </ul>
             </td>
         </tbody>
