consolidate context-specific component contents

--- a/app/components/context-specific-display/derailleur.hbs
+++ b/app/components/context-specific-display/derailleur.hbs
@@ -2,5 +2,5 @@
     Compatibility: {{@item.speedCompatibility}}
 </ul>
 <ul>
-    Make: {{@item.make}}
+    Clutch: {{if @item.hasClutch 'Yes' 'No'}}
 </ul>
