--- a/app/components/context-specific-display/crank-arm.hbs
+++ b/app/components/context-specific-display/crank-arm.hbs
@@ -2,5 +2,5 @@
     Length: {{concat @item.length 'mm'}}
 </ul>
 <ul>
-    Side: {{if @item.isDriveSide 'Yes' 'No'}}
+    Side: {{if @item.isDriveSide 'Drive' 'Non-drive'}}
 </ul>
