--- a/app/components/context-specific-display/hub.hbs
+++ b/app/components/context-specific-display/hub.hbs
@@ -1,3 +1,6 @@
 <ul>
     Disc-compatible: {{if @item.isDiscCompatible 'Yes' 'No'}}
 </ul>
+<ul>
+    Bearing Type: {{format @item.bearingType}}
+</ul>
