--- a/app/components/context-specific-display/pedal.hbs
+++ b/app/components/context-specific-display/pedal.hbs
@@ -5,5 +5,5 @@
     Color: {{format @item.color}}
 </ul>
 <ul>
-    Type: {{if @item.isClipless 'Yes' 'No'}}
+    Type: {{if @item.isClipless 'Clipless' 'Flat'}}
 </ul>
